--- a/css/stylo.css
+++ b/css/stylo.css
@@ -118,7 +118,7 @@ section {
 .imagenInicio {
    width: auto;
    height: auto;
-   margin-top: 1rem;
+   margin-top: 0.5rem;
 }
 
 .imgCarrusel {
@@ -222,7 +222,7 @@ section {
 
 .tutorialTitulo {
    background-color: #3EECAC;
-background-image: linear-gradient(19deg, #3EECAC 0%, #EE74E1 100%);
+   background-image: linear-gradient(19deg, #3EECAC 0%, #EE74E1 100%);
 
    padding: 0.7rem;
    text-transform: uppercase;
@@ -261,6 +261,9 @@ background-image: linear-gradient(19deg, #3EECAC 0%, #EE74E1 100%);
    display: block;
    margin: 0 auto;
    transition: 2s;
+   box-shadow: -12px 12px 5px 0px rgba(0, 0, 0, 0.75);
+   -webkit-box-shadow: -12px 12px 5px 0px rgba(0, 0, 0, 0.75);
+   -moz-box-shadow: -12px 12px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .imgTrabajando:hover {
@@ -463,12 +466,19 @@ main div img {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr;
       align-items: center;
+      padding-block: 0;
+      block-size: 300px;
+      align-content: center;
    }
 
    .blog div img {
       object-fit: contain;
       width: 70%;
       height: 70%;
+   }
+
+   footer div {
+      flex-wrap: wrap;
    }
 }
 
