--- a/css/stylo.css
+++ b/css/stylo.css
@@ -102,17 +102,35 @@ header nav ul li a:hover {
    align-items: center;
 }
 
+/*Carrusel*/
+
+.imgCarrusel {
+   width: auto;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+}
+
+.carousel-inner img {
+   width: 100%;
+   max-height: 700px;
+}
+
+
+
+/** hero o inicio del main **/
+
 .fondoh1Inicio h1 {
    text-align: center;
    background-image: url(../img/fondo-css-3.jpg);
-   position: sticky;
    top: 0;
    bottom: unset;
 }
 
-/** hero o inicio del main **/
 section {
-   margin-top: 0;
+   margin-top: 0.5rem;
+   size: 60%;
 }
 
 .imagenInicio {
@@ -121,10 +139,7 @@ section {
    margin-top: 0.5rem;
 }
 
-.imgCarrusel {
-   display: flex;
-   justify-content: center;
-}
+
 
 .listaProductos {
    display: grid;
@@ -272,6 +287,7 @@ section {
 
 .textoTrabajando {
    display: inline;
+   margin-top: 1.5rem;
 }
 
 .etapaFinal div {
@@ -512,7 +528,7 @@ main div img {
    }
 
    .video {
-      width: 95%;   
+      width: 95%;
    }
 
    .trabajando img {
