--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,18 @@ footer div {
     font-family: 'Times New Roman', Times, serif;
     font-size: 1rem; }
 
+.inputB {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem; }
+
+.botonEnviar {
+  width: 10%;
+  height: 10%;
+  align-items: center; }
+
 .formulario {
   display: flex;
   justify-content: center;
@@ -293,6 +305,18 @@ footer div {
     font-size: 1.5rem;
     font-family: 'mali';
     padding: 1em; }
+
+.quienSoy h1 {
+  text-align: center; }
+
+__contenedor {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+  __contenedor img {
+    width: 70%;
+    height: 70%; }
 
 /*Media Queries*/
 @media screen and (max-width: 900px) {
