--- a/css/style.css
+++ b/css/style.css
@@ -49,18 +49,11 @@ header {
       text-decoration: none;
       color: black; }
       header nav ul li a:hover {
-        background-color: #555bc386;
+        background-color: #555bc3af;
         font-weight: bold;
         border-radius: 0.5rem;
-        padding: 0.5rem;
-        color: rgba(32, 32, 94, 0.87); }
+        padding: 1rem; }
 
-.contenedorHeader {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; }
-
-/*----LOGO arte rox-----*/
 .logo {
   width: auto;
   max-height: 150px;
@@ -73,7 +66,6 @@ header {
   -webkit-box-shadow: 24px 13px 10px 1px rgba(0, 0, 0, 0.66);
   -moz-box-shadow: 24px 13px 10px 1px rgba(0, 0, 0, 0.66); }
 
-/*img LUPA*/
 .imgLupa {
   width: 0.8cm;
   height: 0.8cm;
@@ -84,29 +76,39 @@ header {
     border-radius: 0.5rem;
     padding: 0.5rem; }
 
+.contenedorHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
 /*Carrusel*/
+/** hero o inicio del main **/
+/*transicion del div productos*/
 .imgCarrusel {
   width: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; }
-  .imgCarrusel .carousel-inner img {
-    width: 100%;
-    max-height: 700px; }
 
-/** hero o inicio del main **/
+.carousel-inner img {
+  width: 100%;
+  max-height: 700px; }
+
 .fondoh1Inicio h1 {
   text-align: center;
   background-image: url(../img/fondo-css-3.jpg);
-  top: 0;
-  bottom: unset; }
+  top: 0; }
 
 section {
   margin-top: 0.5rem;
   size: 60%; }
 
-/*---tarjetas de productos----*/
+.imagenInicio {
+  width: auto;
+  height: auto;
+  margin-top: 0.5rem; }
+
 .listaProductos {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -118,54 +120,55 @@ section {
     display: inline-block;
     text-align: center;
     border: 1px solid black;
-    /*margin: 0 1rem 1rem 1rem;*/
     box-shadow: 13px 15px 14px 1px rgba(0, 0, 0, 0.67);
     -webkit-box-shadow: 13px 15px 14px 1px rgba(0, 0, 0, 0.67);
     -moz-box-shadow: 13px 15px 14px 1px rgba(0, 0, 0, 0.67); }
+    .listaProductos div a {
+      display: block;
+      font-size: 3rem;
+      font-family: 'mali';
+      font-weight: 500;
+      text-transform: uppercase;
+      text-decoration: none;
+      color: #471616; }
     .listaProductos div img {
       width: 100%;
       height: 100%;
       opacity: 0.8;
       transition: all 1s; }
-    .listaProductos div .textoenContenedor {
-      position: relative;
-      width: 100%;
-      height: 300px;
-      box-shadow: inset 0px -66px 5px -33px #174a53;
-      /*transicion del div productos*/ }
-      .listaProductos div .textoenContenedor a {
-        position: absolute;
-        bottom: 0;
-        margin-bottom: 0;
-        text-align: center;
-        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.63);
-        background-color: background #85ffca;
-        background: linear-gradient(90deg, #85ffca 0%, #a8b1ff 50%, #ec9eff 100%);
-        background: -moz-linear-gradient(90deg, #85ffca 0%, #a8b1ff 50%, #ec9eff 100%);
-        background: -webkit-linear-gradient(90deg, #85ffca 0%, #a8b1ff 50%, #ec9eff 100%);
-        width: 100%;
-        transition-property: background-color white;
-        transition-duration: 3s; }
-    .listaProductos div div {
-      transition: background-color linear 1s;
-      background: #9b6897; }
-  .listaProductos div a {
-    display: block;
-    font-size: 3rem;
-    font-family: 'mali';
-    font-weight: 500;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #471616; }
-
-.listaProductos section {
-  display: inline-block;
-  text-align: center; }
-  .listaProductos section:hover {
+  .listaProductos section {
+    display: inline-block;
+    text-align: center; }
+  .listaProductos:hover {
     background-color: rgba(109, 47, 73, 0.589);
     transition-duration: 2s; }
 
-/*seccio etapa final*/
+.textoenContenedor {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  box-shadow: inset 0px -66px 5px -33px #174a53; }
+  .textoenContenedor div {
+    transition: background-color linear 1s;
+    background: #9b6897; }
+  .textoenContenedor a {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 0;
+    text-align: center;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.63);
+    background-color: background #85ffca;
+    background: linear-gradient(90deg, #85ffca 0%, #a8b1ff 50%, #ec9eff 100%);
+    background: -moz-linear-gradient(90deg, #85ffca 0%, #a8b1ff 50%, #ec9eff 100%);
+    background: -webkit-linear-gradient(90deg, #85ffca 0%, #a8b1ff 50%, #ec9eff 100%);
+    width: 100%;
+    transition-property: background-color white;
+    transition-duration: 3s; }
+
+.tutorial {
+  grid-column: 1 / 3;
+  text-decoration: underline; }
+
 .etapaFinal {
   display: grid;
   grid-template-columns: 2fr 1fr;
@@ -174,71 +177,94 @@ section {
   .etapaFinal div {
     padding: 1rem;
     margin-bottom: 1rem; }
-  .etapaFinal .tutorialGral {
-    grid-column: 1 / 3;
-    text-decoration: underline; }
-    .etapaFinal .tutorialGral div h2 {
+    .etapaFinal div h2 {
       text-align: center; }
-    .etapaFinal .tutorialGral .tutorialTitulo {
-      background-color: #3EECAC;
-      background-image: linear-gradient(19deg, #3EECAC 0%, #EE74E1 100%);
-      padding: 0.7rem;
-      text-transform: uppercase; }
-      .etapaFinal .tutorialGral .tutorialTitulo .tutorialconVideo {
-        display: grid;
-        grid-template-columns: 2fr 1.5fr;
-        grid-template-rows: 0.5fr 1fr 2fr; }
-      .etapaFinal .tutorialGral .tutorialTitulo .video {
-        display: block;
-        margin: 0 auto; }
-    .etapaFinal .tutorialGral .trabajando {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 0.5fr 1fr 0.8fr;
-      grid-template-areas: "tituloTrabajando tituloTrabajando" "imgTrabajando imgTrabajando" "textoTrabajando textoTrabajando"; }
-    .etapaFinal .tutorialGral .tituloTrabajando {
-      padding-top: 1rem;
-      text-decoration-line: underline;
-      text-decoration-style: wavy;
-      background-color: rgba(190, 149, 158, 0.514); }
-    .etapaFinal .tutorialGral .imgTrabajando {
-      width: 200px;
-      height: 200px;
-      display: block;
-      margin: 0 auto;
-      transition: 2s;
-      box-shadow: -12px 12px 5px 0px rgba(0, 0, 0, 0.75);
-      -webkit-box-shadow: -12px 12px 5px 0px rgba(0, 0, 0, 0.75);
-      -moz-box-shadow: -12px 12px 5px 0px rgba(0, 0, 0, 0.75); }
-      .etapaFinal .tutorialGral .imgTrabajando:hover {
-        transform: scale(1.2); }
-      .etapaFinal .tutorialGral .imgTrabajando .textoTrabajando {
-        display: inline;
-        margin-top: 1.5rem; }
-  .etapaFinal .blog {
-    border: solid;
-    border-color: #93D6D6 #B79AD4;
-    border-style: inset; }
-    .etapaFinal .blog div {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 0.5fr; }
-      .etapaFinal .blog div img {
-        width: auto;
-        height: 300px;
-        object-fit: cover; }
-      .etapaFinal .blog div p {
-        font-family: sans-serif;
-        color: #100635; }
-      .etapaFinal .blog div .blogClientes div {
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        grid-template-rows: 1fr;
-        border: 1px rgba(0, 0, 0, 0.37) dashed; }
-    .etapaFinal .blog h2 {
-      background-color: rgba(128, 128, 128, 0.507);
-      padding: 1rem;
-      margin-top: 0; }
+
+.tutorialTitulo {
+  background-color: #3EECAC;
+  background-image: linear-gradient(19deg, #3EECAC 0%, #EE74E1 100%);
+  padding: 0.7rem;
+  text-transform: uppercase; }
+
+.tutorialconVideo {
+  display: grid;
+  grid-template-columns: 2fr 1.5fr;
+  grid-template-rows: 0.5fr 1fr 2fr; }
+
+.video {
+  display: block;
+  margin: 0 auto; }
+
+.trabajando {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.5fr 1fr 0.8fr;
+  grid-template-areas: "tituloTrabajando tituloTrabajando" "imgTrabajando imgTrabajando" "textoTrabajando textoTrabajando"; }
+
+.tituloTrabajando {
+  padding-top: 1rem;
+  text-decoration-line: underline;
+  text-decoration-style: wavy;
+  background-color: rgba(190, 149, 158, 0.514); }
+
+.imgTrabajando {
+  width: 200px;
+  height: 200px;
+  display: block;
+  margin: 0 auto;
+  transition: 2s;
+  box-shadow: -12px 12px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: -12px 12px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -12px 12px 5px 0px rgba(0, 0, 0, 0.75); }
+  .imgTrabajando:hover {
+    transform: scale(1.2); }
+
+.textoTrabajando {
+  display: inline;
+  margin-top: 1.5rem; }
+
+.blog {
+  border: solid;
+  border-color: #93D6D6 #B79AD4;
+  border-style: inset; }
+  .blog div {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 0.5fr; }
+    .blog div img {
+      width: auto;
+      height: 300px;
+      object-fit: cover; }
+    .blog div p {
+      font-family: sans-serif;
+      color: #100635; }
+  .blog h2 {
+    background-color: rgba(128, 128, 128, 0.507);
+    padding: 1rem;
+    margin-top: 0; }
+
+.blogClientes div {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr;
+  border: 1px rgba(0, 0, 0, 0.37) dashed; }
+
+footer ul {
+  display: inline-flex;
+  list-style: none;
+  font-family: 'Mali', sans-serif;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  gap: 2rem; }
+  footer ul li a {
+    text-decoration: none;
+    color: rgba(51, 43, 47, 0.96);
+    justify-content: flex-end; }
+    footer ul li a:hover {
+      background-color: #555bc386;
+      font-weight: bold;
+      border-radius: 0.5rem;
+      padding: 0.5rem; }
 
 footer div {
   display: flex;
@@ -248,27 +274,13 @@ footer div {
   padding: 1rem;
   background: #dd8eb1;
   background: radial-gradient(circle, #dd8eb1 0%, #1b91a4 95%); }
-  footer div ul {
-    display: inline-flex;
-    list-style: none;
-    font-family: 'Mali', sans-serif;
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    gap: 2rem; }
-    footer div ul li a {
-      text-decoration: none;
-      color: rgba(51, 43, 47, 0.96);
-      justify-content: flex-end; }
-      footer div ul li a:hover {
-        background-color: #555bc386;
-        font-weight: bold;
-        border-radius: 0.5rem;
-        padding: 0.5rem; }
-  footer div section a {
-    margin: 1rem; }
-  footer div .copy {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 1rem; }
+
+footer section a {
+  margin: 1rem; }
+
+.copy {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1rem; }
 
 .inputB {
   display: flex;
@@ -282,13 +294,18 @@ footer div {
   height: 10%;
   align-items: center; }
 
+main form {
+  font-size: 1.5rem;
+  font-family: 'mali';
+  padding: 1em; }
+
 .formulario {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center; }
-  .formulario input {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+  .formulario section img {
+    max-width: 100%; }
   .formulario div {
     width: min-content;
     background-color: #faf7f4;
@@ -299,24 +316,22 @@ footer div {
     box-shadow: -1px 14px 128px 29px rgba(0, 0, 0, 0.75);
     -webkit-box-shadow: -1px 14px 128px 29px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: -1px 14px 128px 29px rgba(0, 0, 0, 0.75); }
-  .formulario section img {
-    max-width: 100%; }
-  .formulario form {
-    font-size: 1.5rem;
-    font-family: 'mali';
-    padding: 1em; }
+  .formulario input {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
 
+/*Quien Soy*/
 .quienSoy h1 {
   text-align: center; }
 
-__contenedor {
+.quienSoy__contenedor {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center; }
-  __contenedor img {
-    width: 70%;
-    height: 70%; }
+
+main div img {
+  width: 70%;
+  height: 70%; }
 
 /*Media Queries*/
 @media screen and (max-width: 900px) {
