--- a/scss/componentes/_pagesQuiensoy.scss
+++ b/scss/componentes/_pagesQuiensoy.scss
@@ -1,15 +1,20 @@
-.quienSoy h1 {
-    text-align: center;
+/*Quien Soy*/
+.quienSoy {
+	h1 {
+		text-align: center;
+	}
 }
-
-__contenedor {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    img {
-        width: 70%;
-        height: 70%;
-    }
+.quienSoy__contenedor {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+main {
+	div {
+		img {
+			width: 70%;
+			height: 70%;
+		}
+	}
 }
