--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,8 @@ header {
         background-color: #555bc3af;
         font-weight: bold;
         border-radius: 0.5rem;
-        padding: 1rem; }
+        padding: 1rem;
+        color: rgba(26, 26, 114, 0.877); }
 
 .logo {
   width: auto;
