--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -20,6 +20,7 @@ header {
 						font-weight: bold;
 						border-radius: 0.5rem;
 						padding: 1rem;
+						color: rgba(26, 26, 114, 0.877);
 					}
 				}
 			}
