--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ header {
     display: inline-flex;
     list-style: none;
     font-family: 'Mali', sans-serif;
-    font-size: 1.5rem;
+    font-size: 2rem;
     text-transform: uppercase;
     gap: 2rem;
     margin-right: 1rem;
@@ -99,16 +99,12 @@ header {
 .fondoh1Inicio h1 {
   text-align: center;
   background-image: url(../img/fondo-css-3.jpg);
-  top: 0; }
+  top: 0;
+  position: sticky; }
 
 section {
   margin-top: 0.5rem;
   size: 60%; }
-
-.imagenInicio {
-  width: auto;
-  height: auto;
-  margin-top: 0.5rem; }
 
 .listaProductos {
   display: grid;
