--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ header {
   header nav ul {
     display: inline-flex;
     list-style: none;
-    font-family: 'Mali', sans-serif;
+    font-family: "Mali", sans-serif;
     font-size: 2rem;
     text-transform: uppercase;
     gap: 2rem;
@@ -47,7 +47,7 @@ header {
     align-items: baseline; }
     header nav ul li a {
       text-decoration: none;
-      color: black; }
+      color: #260C26; }
       header nav ul li a:hover {
         background-color: #555bc3af;
         font-weight: bold;
@@ -72,7 +72,7 @@ header {
   height: 0.8cm;
   margin-right: 1rem; }
   .imgLupa:hover {
-    background-color: #555bc3b7;
+    background-color: #555bc3af;
     font-weight: bold;
     border-radius: 0.5rem;
     padding: 0.5rem; }
@@ -96,7 +96,7 @@ header {
   width: 100%;
   max-height: 700px; }
 
-.fondoh1Inicio h1 {
+.fondohInicio h1 {
   text-align: center;
   background-image: url(../img/fondo-css-3.jpg);
   top: 0;
@@ -195,14 +195,16 @@ section {
 .trabajando {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 0.5fr 1fr 0.8fr;
+  grid-template-rows: 0.3fr 1fr 0.8fr;
   grid-template-areas: "tituloTrabajando tituloTrabajando" "imgTrabajando imgTrabajando" "textoTrabajando textoTrabajando"; }
 
 .tituloTrabajando {
   padding-top: 1rem;
   text-decoration-line: underline;
   text-decoration-style: wavy;
-  background-color: rgba(190, 149, 158, 0.514); }
+  background-color: rgba(190, 149, 158, 0.514);
+  font-weight: 500;
+  color: #260C26; }
 
 .imgTrabajando {
   width: 200px;
@@ -249,19 +251,20 @@ section {
 footer ul {
   display: inline-flex;
   list-style: none;
-  font-family: 'Mali', sans-serif;
+  font-family: "Mali", sans-serif;
   font-size: 1.5rem;
   text-transform: uppercase;
   gap: 2rem; }
   footer ul li a {
     text-decoration: none;
-    color: rgba(51, 43, 47, 0.96);
+    color: #260C26;
     justify-content: flex-end; }
     footer ul li a:hover {
-      background-color: #555bc386;
+      background-color: #555bc3af;
       font-weight: bold;
       border-radius: 0.5rem;
-      padding: 0.5rem; }
+      padding: 0.5rem;
+      color: rgba(26, 26, 114, 0.877); }
 
 footer div {
   display: flex;
