--- a/scss/componentes/_pagesContacto.scss
+++ b/scss/componentes/_pagesContacto.scss
@@ -1,3 +1,5 @@
+@import "../base/variables";
+
 main {
 	form {
 		font-size: 1.5rem;
@@ -11,10 +13,8 @@ main {
 			max-width: 100%;
 		}
 	}
-	display: flex;
-	justify-content: center;
+	@include flex (flex, center, center);
 	flex-direction: column;
-	align-items: center;
 	div {
 		width: min-content;
 		background-color: rgb(250, 247, 244);
