--- a/scss/componentes/_pagesQuiensoy.scss
+++ b/scss/componentes/_pagesQuiensoy.scss
@@ -1,14 +1,15 @@
 /*Quien Soy*/
+@import "../base/variables";
+
 .quienSoy {
 	h1 {
 		text-align: center;
 	}
 }
 .quienSoy__contenedor {
-	display: flex;
+	@include flex (flex, center, center);
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	
 }
 main {
 	div {
