--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html {
   box-sizing: border-box;
   font-size: 62.5%;
@@ -243,7 +242,7 @@ section {
     padding: 1rem;
     margin-top: 0; }
   .blog h3::after {
-    content: url("💗"); }
+    content: url("../img/corazon.png"); }
 
 .blogClientes div {
   display: grid;
@@ -252,7 +251,7 @@ section {
   border: 1px rgba(0, 0, 0, 0.37) dashed; }
 
 .blogClientes p::after {
-  content: url("//img/frase-de-entrenamiento.png"); }
+  content: url("../img/frase-de-entrenamiento.png"); }
 
 /*Media Queries*/
 @media screen and (max-width: 900px) {
@@ -394,6 +393,9 @@ main form {
     -moz-box-shadow: -1px 14px 128px 29px rgba(0, 0, 0, 0.75); }
   .formulario input {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+  .formulario textarea::placeholder {
+    font-style: italic;
+    color: grey; }
 
 /*Quien Soy*/
 .quienSoy h1 {
@@ -404,6 +406,8 @@ main form {
   justify-content: center;
   align-items: center;
   flex-direction: column; }
+  .quienSoy__contenedor p {
+    font-weight: 500; }
 
 main div img {
   width: 70%;
