--- a/scss/componentes/_pagesContacto.scss
+++ b/scss/componentes/_pagesContacto.scss
@@ -29,4 +29,10 @@ main {
 	input {
 		font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	}
+	textarea {
+		&::placeholder {
+			font-style: italic;
+			color: grey;
+		}
+	}
 }
