--- a/scss/base/_media-query.scss
+++ b/scss/base/_media-query.scss
@@ -13,8 +13,8 @@
 
 @media screen and (max-width: 700px) {
     .listaProductos {
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
     }
 
     .listaProductos div a {
@@ -62,7 +62,9 @@
 @media screen and (max-width: 600px) {
 
     .contenedorHeader div nav ul {
-        gap: 1rem;
+        display: block;
+        margin: 2rem;
+        list-style: thai;
     }
 
     .listaProductos {
@@ -71,12 +73,28 @@
     }
 
     .logo {
-        width: 50%;
-        margin-left: 0.5rem;
+        width: 70%;
+        margin-left: 1rem;
     }
 
-    footer div {
+    .imgLupa {
+        width: 50%;
+        height: 50%;
+    }
+
+    footer ul {
+        display: block;
+        margin: 2rem;
+        list-style: thai;
+        justify-content: flex-end;
+    }
+
+    .copy {
         width: 100%;
+    }
+
+    footer div section {
+        padding: 0;
     }
 }
 
@@ -91,26 +109,44 @@
         grid-template-rows: 8fr;
     }
 
-    .imgLupa {
-        width: 60%;
-        height: 60%;
-    }
-
     .etapaFinal div {
         width: 95%;
-    }
-
-    .tutorialGral div {
-        width: 95%;
-        justify-content: center;
-        align-items: center;
     }
 
     .video {
         width: 95%;
     }
 
+    .trabajando {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.2fr 0.2fr 0.8fr 0.8fr 0.8fr 0.8fr;
+        grid-template-areas:
+            "tituloTrabajando"
+            "imgTrabajando"
+            "textoTrabajando"
+            "tituloTrabajando2"
+            "imgTrabajando2"
+            "textoTrabajando2";
+    }
+
     .trabajando img {
         width: 80%;
+    }
+
+    .tituloTrabajando::before {
+        content: "☝";
+    }
+
+    .tituloTrabajando2::before {
+        content: "✌";
+    }
+
+    .textoTrabajando::before {
+        content: "☝";
+    }
+
+    .textoTrabajando2::before {
+        content: "✌";
     }
 }
